--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,19 @@
    ~ license.md in the project's root directory or use an internet search engine to see the full license. -->
 
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="lightThemeGradientStart">#FF55D69A</color>
+    <color name="lightThemeGradientEnd">#FF45D6D1</color>
+    <color name="lightThemeSecondary">#FF46A8FF</color>
+    <color name="lightBackground">#FFF1F3F5</color>
+    <color name="lightSurface">#FFDEE2E6</color>
+    <color name="lightOnSurface">#FF2E3236</color>
+    <color name="lightOnPrimary">#FF2E3236</color>
+
+    <color name="darkThemeGradientStart">#FF358560</color>
+    <color name="darkThemeGradientEnd">#FF2B867B</color>
+    <color name="darkThemeSecondary">#FF3174AF</color>
+    <color name="darkBackground">#FF212529</color>
+    <color name="darkSurface">#FF2F3335</color>
+    <color name="darkOnSurface">#FFADB5BD</color>
+    <color name="darkOnPrimary">#FF2E3236</color>
 </resources>
