--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,16 @@
 <!-- This file is part of SoundObservatory, which is released under the Apache License 2.0. See
    ~ license.md in the project's root directory or use an internet search engine to see the full license. -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
     <style name="Theme.SoundObservatory" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/lightThemeGradientStart</item>
+        <item name="colorPrimaryVariant">@color/lightThemeGradientEnd</item>
+        <item name="colorOnPrimary">@color/lightOnPrimary</item>
+        <item name="colorSecondary">@color/lightThemeSecondary</item>
+        <item name="colorSecondaryVariant">@color/lightThemeSecondary</item>
+        <item name="colorOnSecondary">@color/lightOnPrimary</item>
+        <item name="colorSurface">@color/lightSurface</item>
+        <item name="colorOnSurface">@color/lightOnSurface</item>
     </style>
 
     <style name="Theme.SoundObservatory.NoActionBar">
