--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,9 @@
-<!-- This file is part of SoundObservatory, which is released under the Apache License 2.0. See
-   ~ license.md in the project's root directory or use an internet search engine to see the full license. -->
+<!-- This file is part of SoundAura, which is released under
+   ~ the terms of the Apache License 2.0. See license.md in
+   ~ the project's root directory to see the full license. -->
 
 <resources>
-    <style name="Theme.SoundObservatory" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SoundAura" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/darkThemeGradientStart</item>
         <item name="colorPrimaryVariant">@color/darkThemeGradientEnd</item>
         <item name="colorOnPrimary">@color/darkOnPrimary</item>
