--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- This file is part of SoundObservatory, which is released under the Apache License 2.0. See
-   ~ license.md in the project's root directory or use an internet search engine to see the full license. -->
+<!-- This file is part of SoundAura, which is released under
+   ~ the terms of the Apache License 2.0. See license.md in
+   ~ the project's root directory to see the full license. -->
 
 <resources>
     <color name="lightThemeGradientStart">#FF55D69A</color>
