--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
-<!-- This file is part of SoundObservatory, which is released under the Apache License 2.0. See
-   ~ license.md in the project's root directory or use an internet search engine to see the full license. -->
+<!-- This file is part of SoundAura, which is released under
+   ~ the terms of the Apache License 2.0. See license.md in
+   ~ the project's root directory to see the full license. -->
 
 <resources>
-    <style name="Theme.SoundObservatory" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SoundAura" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/lightThemeGradientStart</item>
         <item name="colorPrimaryVariant">@color/lightThemeGradientEnd</item>
         <item name="colorOnPrimary">@color/lightOnPrimary</item>
@@ -13,12 +14,12 @@
         <item name="colorOnSurface">@color/lightOnSurface</item>
     </style>
 
-    <style name="Theme.SoundObservatory.NoActionBar">
+    <style name="Theme.SoundAura.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.SoundObservatory.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.SoundAura.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.SoundObservatory.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.SoundAura.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
