--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -6,29 +6,39 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="30"
+    android:viewportHeight="30">
+    <group>
+        <path
+            android:pathData="M 15 13 A 2 2 0 0 0 15 17 A 2 2 0 0 0 15 13"
+            android:strokeLineCap="butt">
+            <aapt:attr name="android:fillColor">
+                <gradient
+                    android:startX="1"
+                    android:startY="10"
+                    android:endX="19"
+                    android:endY="10"
+                    android:type="linear">
+                    <item android:offset="0" android:color="#55D69A"/>
+                    <item android:offset="1" android:color="#3EC2BD"/>
+                </gradient>
+            </aapt:attr>
+        </path>
+        <path
+            android:pathData="M 15 5.875 A 9.125 9.125 0 0 0 15 24.125 A 9.125 9.125 0 0 0 15 5.875 M 16.896 18.284 A 3.792 3.792 0 0 0 16.896 11.716 M 13.104 11.716 A 3.792 3.792 0 0 0 13.104 18.284 M 20.594 11.77 A 6.459 6.459 0 0 0 9.406 11.77 M 9.406 18.23 A 6.459 6.459 0 0 0 20.594 18.23"
+            android:strokeWidth="1.75"
+            android:strokeLineCap="round">
+            <aapt:attr name="android:strokeColor">
+                <gradient
+                    android:startX="1"
+                    android:startY="10"
+                    android:endX="19"
+                    android:endY="10"
+                    android:type="linear">
+                    <item android:offset="0" android:color="#55D69A"/>
+                    <item android:offset="1" android:color="#3EC2BD"/>
+                </gradient>
+            </aapt:attr>
+        </path>
+    </group>
 </vector>
